Other fixies proposed by sonar